# portfolio-template-main

./: .gitignore  CONTACT-SETUP-GUIDE.md  DEPLOYMENT-STRATEGY.md  EMAILJS-QUICK-FIX.md  IMPLEMENTATION-GUIDE.md  README.md  about-me.html  blog.html  contact-me.html  get-started.html  index.html  learn-more.html  modern-redesign.html  portfolio.html  resources.html  signup.html  skill-set.html  style-about-me.css  style-blog.css  style-videos.css  style.css  videos.html
.github/workflows/: deploy.yml
AI/: BFS_DFS_Using_8_Puzzle_Problem.py  DecisionTree.ipynb
AI/GenerativeAI/: Extracting_Text_from_digital_invoice.ipynb  WebBrochure.ipynb
AI/GenerativeAI/VectorStore/: Datastaxdb+(1).ipynb
AI/MCP/gnews-mcp-server/: examples.py  mcp_client.py  pyproject.toml  style.css  test_gnews_client.py
AI/SNOWFLAKE/NOTEBOOKS/: Snowpark.ipynb
Clustering/: K-Means-Clustering-without-libs.ipynb
DataScraping/: Dockerfile  Likedinscrapper.rtf  README.md  SentimentsAnalysis.ipynb  app.py  connection.py  docker-compose.yml  linkedin_profiles.csv  main.py  readme.txt  requirements.txt  scraper.py  scrapper.py  suggest.py  test.py  zip
Machine Learning/LinearRegression/: Insurance_linear_regression.ipynb
Reinforcement_Learning/: README.md  TicTocToe.py
insurance-claim-assistant/: app.py  requirements.txt
insurance-claim-assistant/src/: config.py  models.py
mcp-server/: README.md  main.py  mcp_server.py  mocked_db.py  pyproject.toml  requirements.txt
portfolio-template-main/: about-me.html  index.html  project1.html  project2.html  project3.html  style.css
(+15 files in other folders)
