[project]
name = "gnews-server"
version = "0.1.0"
description = "GNews API MCP Server"
readme = "README.md"
requires-python = ">=3.11"

[theme]
base = "dark"
primaryColor = "#00c9d4"
backgroundColor = "#0b1214"
secondaryBackgroundColor = "#101c20"
textColor = "#ffffff"
font = "sans serif"


dependencies = [
    "mcp>=1.13.1",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]







[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnews-mcp-server"
version = "0.1.0"
description = "Enterprise GNews API MCP server with Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Rajesh Kumar", email = "you@example.com" }
]

license = { text = "MIT" }

dependencies = [
  "streamlit>=1.35.0",
  "mcp>=1.13.1",
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
  "Pillow>=10.0.0"
]

# Optional: separate CLI / UI extras if you want
[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
]

[project.scripts]
# Run MCP server from CLI
gnews-mcp-server = "main:main"          # adjust if you have a main() entry
# Run Streamlit UI from CLI
gnews-mcp-dashboard = "streamlit_app:main"  # define main() in streamlit_app if you want

[tool.hatch.build.targets.wheel]
packages = ["."]